@@ -15,6 +15,7 @@ public:
   CMusicInfoTag(const CMusicInfoTag& tag);
   virtual ~CMusicInfoTag();
   const CMusicInfoTag& operator =(const CMusicInfoTag& tag);
+  bool CMusicInfoTag::operator !=(const CMusicInfoTag& tag) const;
   bool Load(const CStdString& strFileName);
   void Save(const CStdString& strFileName);
   bool Loaded() const;
